IndexBuildsCoordinator starts index build on wrong collection

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-07-29
    • 15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When IndexBuildsCoordinator::_registerAndSetUpIndexBuild() is acquiring the collection in order to begin an index build on a standalone or primary node, it may be possible for catalog changes to cause the index build to be initialized on a collection with a different UUID from what is provided to the IndexBuildsCoordinator.

      This is applies only when the IndexBuildsCoordinator is enabled for the createIndexes command.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: