SERVER-42280 add index build id to collection missing invariant message